<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tortoisebot_navigation</name>
  <version>0.0.0</version>
  <description>This script defines a ROS2 node that sends a sequence of waypoints to the navigation stack and monitors feedback from the navigation stack. The waypoints are defined in a specific path plan. The script uses the FollowWaypoints action from the nav2_msgs package to send the waypoints and receive feedback.</description>
  <maintainer email="amanrox97@gmail.com">amanmishra</maintainer>
  <license>CC-BY-NC-ND</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
